# rust-hello-world-uefi-nix

./: .gitignore  Cargo.toml  README.md  _run_qemu.sh  build.sh  hello-world-uefi-rust.nix  run-direct.sh  run-startup-nsh.sh  run.sh  rust-toolchain.toml  shell.nix  startup.nsh
.cargo/: config.toml
nix/: rust.nix
src/: main.rs
