[package]
name = "rust-hello-world-uefi-app"
version = "0.1.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"

[dependencies]
uefi = "0.9.0"
uefi-services = "0.6.0"
log = "0.4.14"

# ugly way to make this work in Nix
# see https://discourse.nixos.org/t/build-rust-app-using-cargos-build-std-feature-with-naersk-fails-because-rust-src-is-missing/13161/
[dev-dependencies]
compiler_builtins = "0"
cfg-if = "0"
getopts = "0"
libc = "0"
hashbrown = "0"
rustc-demangle = "0"
hermit-abi = "0"
dlmalloc = "0"
wasi = "0"
fortanix-sgx-abi = "0"
cc = "1"
